fixing read/revisit positioning, removing jump to last book on create

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -33,11 +33,17 @@
   opacity: 0.5;
 }
 
+p.bookName {
+  height: 50px;
+  margin-bottom: -5px;
+}
+
 span.read { 
   font-size:14px;
-  position: absolute;
-  bottom: 85px;
-  right: 40px;
-  /*float:right;*/
-  /*margin-top:50px;*/
+  /*position: absolute;*/
+  /*bottom: 85px;*/
+  /*right: 40px;*/
+  float:right;
+  margin-top:30px;
+
 }
